--- a/resume_website.html
+++ b/resume_website.html
@@ -26,7 +26,14 @@
                     <!-- your education -->
                 </section>
             </article>
-            <article id="mainRight"
+            <article id="mainRight">
+                <section>
+                    <h2>ABOUT</h2>
+                </section>
+                <section>
+                    <h2>WORK EXPERIENCE</h2>
+                </section>
+            </article>
         </main>
     </body>
 </html>
